docs: fix swagger documentation
